# danger-rose

./: .coverage  .coveragerc  .env  .gitignore  .pre-commit-config.yaml  .releaserc.json  ASSET_REQUIREMENTS.md  AUDIO_DOWNLOAD_GUIDE.md  AUDIO_QUICK_REFERENCE.md  BRANCH_CLEANUP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  DOCKER_SETUP_GUIDE.md  DOWNLOADED_ASSETS.md  Dockerfile  FOUND_ASSETS.md  GAME_DESIGN.md  LINKS.md  Makefile  PRD.md  README.md  SECURITY.md  TECHNICAL_ARCHITECTURE.md  bandit-report.json  configure-github-ruleset.md  danger-rose-onefile.spec  danger-rose.spec  docker-compose.yml  download_audio_guide.md  pyproject.toml  pytest.ini
.claude/: settings.json  settings.local.json
.claude/agents/: asset-generator.md  audio-expert.md  build-expert.md  game-mechanics.md  game-tester.md  kid-coder.md  performance-optimizer.md  pygame-game-developer.md  save-manager.md  sprite-expert.md  ui-designer.md
.claude/commands/: ai-branch.md  ai-cli-debug.md  ai-deps.md  ai-find-issue.md  ai-finish.md  ai-git-health.md  ai-pick-issue.md  ai-plan.md  ai-publish.md  ai-related.md  ai-repo-health.md  ai-restart.md  ai-ship.md  ai-test-full.md  ai-test-matrix.md  ai-test-mods.md  celebrate.md  kid-challenge.md  optimize-fps.md  run-game.md  sprite-cut.md  sv-choose-what-to-work-on.md  sv-ship.md  sv-start-work.md  test-minigame.md
.github/: REPOSITORY_SETUP.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  game-balance.md  library-feature-spec.yml
.github/workflows/: game-ci.yaml  pipeline.yaml  pre-commit.yaml  release.yaml
.github/workflows/archive/: pipeline.yaml  pre-commit.yaml
assets/audio/: ATTRIBUTION.md
assets/audio/music/drive/: music_manifest.json
assets/downloads/lpc_characters/lpc-character-bases-v3_1/: CREDITS.txt
assets/downloads/lpc_characters/lpc-character-bases-v3_1/_build/: build.sh  test.sh
assets/downloads/lpc_characters/lpc-character-bases-v3_1/_build/palettes/: palettes.pyxel  skin.json
assets/images/characters/new_sprites/: ASSET_REPORT.md  OUTFIT_GUIDE.md
assets/images/characters/new_sprites/dad/hub/: animation_metadata.json
assets/images/characters/new_sprites/danger/hub/: animation_metadata.json
assets/images/trophies/: README.txt
assets/images/vehicles/traffic/: TRAFFIC_SPRITES_INFO.md
assets/sounds/: .gitkeep
docs/: vegas_boss_implementation.md
examples/: sprite_integration_example.py
github-issues/: issue-25-road-curve-alignment.md  issue-26-missing-ev-sprites.md
guides/: README.md
guides/ai/architecture/: animation.md  package-structure.md  save-system.md  scene-system.md
guides/ai/building/: assets.md  cross-platform.md  pyinstaller.md
guides/ai/content/: audio.md  characters.md  levels.md  minigame-design.md
guides/ai/development/: debug-tools.md  game-patterns.md  kid-friendly.md  pygame-basics.md
guides/ai/quick-reference/: assets.md  commands.md  testing.md
guides/ai/templates/: character.md  minigame.md  scene.md
guides/ai/testing/: game-logic.md  kid-testing.md  performance.md  visual.md
guides/ai/troubleshooting/: assets.md  common.md  performance.md
guides/development/: audio-summary.md  automation-test.md  devops-pipeline.md  docker.md  game-mechanics.md  mutation-testing.md  technical-architecture.md
guides/development/assets/: downloaded-assets.md  requirements.md
guides/development/troubleshooting/: claude-code-windows.md
guides/project/: augint-library-readme.md  game-design.md
guides/reference/: sprite-collection-summary.md
guides/setup/: bootstrap.md
guides/setup/audio/: download-summary.md  quick-setup.md
scripts/: convert_wav_to_ogg.py  create_ev_placeholders.py  download_audio.bat  download_audio.py  vault_utils.py
src/: main.py  scene_manager.py
src/config/: __init__.py  constants.py  env_config.py  game_config.py
src/effects/: __init__.py  trophy_particles.py
src/entities/: __init__.py  couch.py  dad_ai.py  door.py  player.py  pool_targets.py  powerup.py  snowflake.py  target_particles.py  trophy_shelf.py  vegas_boss.py
src/managers/: __init__.py  race_music_manager.py  sound_manager.py
src/scenes/: base_scene.py  drive.py  hub.py  leaderboard.py  name_entry.py  pause_menu.py  pool.py  settings.py  ski.py  slope_generator.py  slope_generator.py.backup  title_screen.py  vegas.py
src/ui/: __init__.py  drawing_helpers.py  music_selector.py  notification.py  vehicle_selector.py
src/utils/: __init__.py  animated_character.py  asset_paths.py  attack_character.py  high_score_manager.py  save_manager.py  sprite_loader.py
tests/: conftest.py  test_attack_animation.py  test_couch_save.py  test_dad_ai.py  test_door_interaction.py  test_hub_world.py  test_player.py  test_pool.py  test_scene_manager.py  test_ski_scene.py  test_snowflake_mechanics.py  test_sound_manager.py  test_sound_manager_ci.py  test_trophy_particles.py  test_trophy_shelf.py  test_vegas_boss.py
tests/integration/: conftest.py  test_high_score_integration.py
tests/mocks/: mock_sound_manager.py
tests/unit/: conftest.py  test_animated_character.py  test_asset_paths.py  test_attack_character.py  test_config.py  test_constants_refactor.py  test_door.py  test_drawing_helpers.py  test_env_config_edge_cases.py  test_game_state_management.py  test_high_score_manager.py  test_mock_sound_manager.py  test_pause_menu.py  test_player.py  test_pool_powerups.py  test_pool_targets.py  test_powerup.py  test_save_manager.py  test_scene_manager.py  test_scene_manager_pause.py  test_settings_scene.py  test_slope_generator.py  test_snowflake.py  test_sprite_loader.py  test_vegas_boss_additional.py  test_water_balloon.py
tools/: audio_validator.py  automated_game_tester.py  celebrate.py  check_assets.py  download_assets.py  extract_sprite_frames.py  generate_placeholder_audio.py  run_automated_tests.py  visual_regression_tester.py
tools/visual/: test_attack_animation.py  test_attack_character.py  test_compare_layouts.py  test_head_fix.py  test_sprite_cutting.py  test_sprite_layout.py  test_upward_fix.py
(+7 files in other folders)
