[project]
name = "danger-rose"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Vange",email = "7166607+svange@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
augint-github = "^1.3.1"
pytest = "^8.4.1"
pytest-html = "^4.1.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.3"
pre-commit = "^4.2.0"
pyinstaller = "^6.14.2"


[tool.poetry.dependencies]
pygame-ce = "^2.5.5"

[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests/unit", "tests/integration"]

# Ignore paths
norecursedirs = [".git", ".tox", "build", "dist", "*.egg", "tools"]

# Coverage options
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=50",
    "--cov-config=.coveragerc",
]

# Markers for test categorization
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "slow: Tests that take more than a few seconds to run",
    "visual: Tests that generate visual output (not run in CI)",
    "requires_display: Tests that require a display (skipped in headless environments)",
]

# Disable pytest warnings about unregistered marks
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
exclude = [
    "tools/visual/*.py",  # Visual test tools are allowed to have different import patterns
]
